--- a/package.json
+++ b/package.json
@@ -9,16 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.18.0",
+    "autoprefixer": "^10.4.20",
+    "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
+    "electron-serve": "^2.0.0",
+    "electron-store": "^10.0.0",
+    "express": "^4.19.2",
+    "next": "14.2.5",
+    "nodemon": "^3.1.4",
+    "postcss-loader": "^8.1.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-icons": "^5.3.0",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
+    "electron": "^31.3.1",
+    "electron-builder": "^24.13.3",
+    "nextron": "^9.1.0",
+    "postcss": "^8.4.41",
+    "prisma": "^5.18.0",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5"
   }
 }
